# xo-gui

./: ai.ipynb  back.py  pyproject.toml  requirements.txt  start_ai.sh  start_gui.sh  start_test.sh  test_ai.py  tests.py  tic-tac-toe_gui.py  xo-gui.py
.ipynb_checkpoints/: ai-checkpoint.ipynb
Tic_Tac_Toe/: ai.py  game.py  players.py
