[tool.poetry]
name = "tic-tac-toe-gui"
version = "0.1.0"
description = ""
authors = ["invalid-jess <jessgaming55@gmail.com>"]
readme = "README.md"
packages = [{include = "tic_tac_toe_gui"}]

[tool.poetry.dependencies]
python = "^3.10"
PySimpleGUI = "^4.60.4"
treelib = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
